# davinci-helper

./: LICENSE  README.md  com.davinci.helper.app.spec  compile-davinci-helper.sh  compile-davinci-toolbox.sh  create_archive.sh  davinci-helper.spec  davinci-toolbox.spec  test-davinci-helper.sh
.github/: FUNDING.yml
davinci-helper/: LICENSE  README.md  add_gettext.sh  convert_po.sh  davinci_helper.pot  generate_pot.sh  pyproject.toml  setup.py
davinci-helper-1.0/: README.md  prova_1.pot  setup.py
davinci-helper-1.0/data/css/: style-dark.css
davinci-helper-1.0/data/desktop/: com.davinci.helper.app.desktop  com.davinci.helper.app.metainfo.xml
davinci-helper-1.0/data/gpu_support/: amd_support.txt  intel_support.txt
davinci-helper-1.0/data/icons/: davinci-helper.desktop
davinci-helper-1.0/data/polkit/: com.davinci.helper.app.policy  com.davinci.helper.app.rules  davinci-helper.policy  davinci-helper.rules
davinci-helper-1.0/data/ui/: about.ui  about_window.ui  error_dialog.ui  function_1.ui  function_2.ui  function_3.ui  function_4.ui  gpu_warning_splash_screen.ui  info_function_1.ui  info_function_2.ui  info_function_3.ui  info_function_4.ui  main_window.ui  welcome_messagge_splash_screen.ui
davinci-helper-1.0/davinci_helper/: main.py
davinci-helper-1.0/davinci_helper/functions/: about_gui.py  function_1.py  function_1_gui.py  function_2.py  function_2_gui.py  function_3.py  function_3_gui.py  function_4_gui.py  settings_management.py
davinci-helper-1.0/locale/: POTFILES  davinci-first.pot
davinci-helper-1.0/po/: POTFILES  meson.build
davinci-helper-1.0/src/: main.py
davinci-helper-1.0/src/functions/: function_1.py  function_1_GUI.py
davinci-helper/data/: LICENSE
davinci-helper/data/css/: style.css
davinci-helper/data/desktop/: com.davinci.helper.app.desktop  com.davinci.helper.app.metainfo.xml
davinci-helper/data/gpu_support/: amd_support.txt
davinci-helper/data/polkit/: com.davinci.helper.app.policy
davinci-helper/data/settings/: davinci_helper_settings
davinci-helper/data/ui/: check_update.ui  check_update_dialog.ui  converter_dialog.ui  ffmpeg_install.ui  file_error_dialog.ui  file_size_warning_dialog.ui  function_1.ui  function_2.ui  function_3.ui  function_4.ui  function_5.ui  loading.ui  main.ui  main_window.ui  module_install_error_dialog.ui  start_screen.ui  welcome_dialog.ui
davinci-helper/davinci_helper/: main.py
davinci-helper/davinci_helper/functions/: about_gui.py  check_update.py  function_1.py  function_1_gui.py  function_2.py  function_2_gui.py  function_3.py  function_3_gui.py  function_4.py  function_4_gui.py  settings_management.py
davinci-helper/davinci_helper/functions/gui/: about_dialog_gui.py  check_update_dialog_gui.py  converter_dialog_gui.py  ffmpeg_install_gui.py  file_error_dialog_gui.py  file_size_warning_dialog_gui.py  function_1_gui.py  function_2_gui.py  function_3_gui.py  function_4_gui.py  function_5_gui.py  loading_gui.py  module_install_error_dialog_guy.py  settings_management_dialog_gui.py  start_screen_gui.py  welcome_dialog_gui.py
davinci-helper/davinci_helper/functions/logic/: app_info.py  check_update.py  conversion_settings.py  function_1.py  function_2.py  function_3.py  function_4.py  install_ffmpeg.py  install_python_modules.py  setting_management.py  utility.py
davinci-helper/locale/: davinci-first.pot  davinci-helper.pot  davinci-second.pot
davinci-helper/locale/it/LC_MESSAGES/: davinci-helper.mo  davinci-helper.po  davinci-helper.pot  davinci-helper.po~
davinci-toolbox/: README.md  setup.py
davinci-toolbox/data/css/: style-dark.css
davinci-toolbox/data/desktop/: com.davinci.toolbox.app.desktop  com.davinci.toolbox.app.metainfo.xml
davinci-toolbox/data/gpu_support/: nvidia_support.txt
davinci-toolbox/data/polkit/: com.davinci.toolbox.app.policy  com.davinci.toolbox.app.rules
davinci-toolbox/data/ui/: function_3.ui  info_function_2.ui  info_function_3.ui  main_window.ui  reset_settings.ui
davinci-toolbox/davinci_toolbox/: main.py
davinci-toolbox/davinci_toolbox/functions/: about_gui.py  check_update.py  (+9 more)
davinci-toolbox/locale/: davinci-first.pot
